# autoSARM

./: .dockerignore  .gitignore  Compare_plot.ipynb  Create_SARM.ipynb  DOCKER_USAGE.md  Dockerfile  DualTarget_design.ipynb  Motif_Extraction_AMPK.ipynb  Motif_Extraction_JAK.ipynb  README.md  REFACTORING.md  Substructure_search.ipynb  build.sh  create_sarm.py  create_tree.ipynb  create_tree.py  docker-compose.yml  docker-manage.sh  env.yaml  environment.yml  print_sar.ipynb  print_sar_single_core.py  pyproject.toml  quick_build.sh  test.ipynb  test_functions.ipynb
docs/: BUILD_WITH_TAGS.md  EXTERNAL_INPUT_FILES.md  SAR_TREE_SUCCESS.md  TREE_GENERATION_GUIDE.md  USAGE_EXAMPLES.md  代码流程详解.md  修改说明.md
examples/: README.md  basic_usage.py  example_compounds.csv
scripts/: BindingDB_processing.ipynb  extract_sdf_fromMaegz.py
src/autosarm/: __init__.py
src/autosarm/cli/: __init__.py  create_sarm.py  create_tree.py  main.py  print_sar.py
src/autosarm/core/: __init__.py  sarm.py  tree.py
src/autosarm/utils/: __init__.py  data_utils.py  mol_utils.py
tests/: __init__.py  conftest.py  test_mol_utils.py  test_sarm.py
utils/: __init__.py  common_utils.py  dual_target_utils.py  dual_target_utils_bakMay.py  grid_pos_utils.py  sarm_utils.py  tree_utils.py
